# blackscholes-rust

./: .clang-format  .clang-tidy  .gitignore  .pylintrc  Cargo.toml  LICENSE.md  README.md  SP500_returns.csv  blackscholes.pyi  blackscholes_python.pyi  build.rs  pyproject.toml  rustfmt.toml
.github/workflows/: bench_regression.yml  benchmark.yml  publish.yml  rust.yml
benches/: additional_benches_to_verify.rs  black.rs  common.rs  enum_bench.rs  greeks.rs  implied_volatility.rs  pricing.rs
benches/batch/: greeks.rs  pricing.rs
benches/common/: mod.rs
benches/single/: greeks.rs  implied_volatility.rs  option_pricing.rs
benches/throughput/: batch_size_study.rs  option_pricing.rs  scaling.rs  visualize.rs
blackscholes_test/: Cargo.toml
blackscholes_test/src/: blackscholes_python_test.py  main.rs  tempCodeRunnerFile.py
dev/bench/: data.js
docs/: BENCHMARKING.md
lib/: CMakeLists.txt  erf_cody.cpp  erf_cody_test.cpp  erf_std.cpp  importexport.h  lets_be_rational.cpp  lets_be_rational.h  normaldistribution.cpp  normaldistribution.h  rationalcubic.cpp  rationalcubic.h  version.h
proptest-regressions/: lets_be_rational.txt
scripts/: convert_criterion_to_libtest.py
src/: common.rs  constants.rs  error.rs  greeks.rs  greeks_tests.rs  implied_volatility.rs  inputs.rs  lets_be_rational.rs  lib.rs  lib_test.rs  main.rs  option_type.rs  pricing.rs  rational_implied_volatility.rs  shift.rs
src/lets_be_rational/: black.rs  black_tests.rs  constants.rs  intrinsic.rs  mod.rs  normal_distribution.rs  rational_cubic.rs  so_rational.rs
src/lets_be_rational/cody/: mod.rs  optimized.rs
src/python_tests/: tests.py
src/valuators/: mod.rs
src/valuators/black_76/: distributions.rs  greeks.rs  implied_volatility.rs  inputs.rs  pricing.rs
src/valuators/black_scholes/: constants.rs  distributions.rs  greeks.rs  implied_volatility.rs  inputs.rs  mod.rs  pricing.rs
tests/: black_tests.rs  bstest.rs  test_greeks.rs  test_implied_volatility.rs  test_pricing.rs
