[package]
name = "blackscholes"
version = "0.24.0"
edition = "2021"
license = "MIT"
description = "Black-Scholes option pricing model calculator"
repository = "https://github.com/hayden4r4/blackscholes-rust"
documentation = "https://docs.rs/blackscholes"
readme = "README.md"
authors = ["Hayden Rose"]
keywords = ["finance", "option", "pricing", "blackscholes", "option-pricing"]

[lib]
bench = false

[profile.release]
codegen-units = 1
lto = "fat"

[profile.bench]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"


[dev-dependencies]
approx = "0.5.1"
assert_approx_eq = "1.1.0"
criterion = { version = "0.6.0", features = ["html_reports"] }
proptest = "1.7.0"
rand = { version = "0.8.5", default-features = false }
plotters = "0.3"
indicatif = "0.17"

[dependencies]
num-traits = "0.2.19"
statrs = "0.17.1"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

#[[bench]]
#name = "black"
#harness = false

# Benchmarks
[[bench]]
name = "pricing"
harness = false

[[bench]]
name = "implied_volatility"
harness = false

[[bench]]
name = "greeks"
harness = false

[[bench]]
name = "single_option"
path = "benches/single/option_pricing.rs"
harness = false

[[bench]]
name = "single_greeks"
path = "benches/single/greeks.rs"
harness = false

[[bench]]
name = "single_iv"
path = "benches/single/implied_volatility.rs"
harness = false

[[bench]]
name = "batch_pricing"
path = "benches/batch/pricing.rs"
harness = false

[[bench]]
name = "batch_greeks"
path = "benches/batch/greeks.rs"
harness = false

[[bench]]
name = "throughput"
path = "benches/throughput/option_pricing.rs"
harness = false

[[bench]]
name = "scaling"
path = "benches/throughput/scaling.rs"
harness = false

[[bench]]
name = "visualize"
path = "benches/throughput/visualize.rs"
harness = false

[[bench]]
name = "batch_size_study"
path = "benches/throughput/batch_size_study.rs"
harness = false
