[package]
name = "blackscholes_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blackscholes = { path = "/home/haydenrose/projects/blackscholes" }
crossbeam-channel = "0.5.4"
crossbeam-utils = "0.8.8"
threadpool = "1.8.1"
rayon = "1.5.3"
